Fix an issue with vertical and horizontal overflow

--- a/src/app/list-content/list-content.component.scss
+++ b/src/app/list-content/list-content.component.scss
@@ -48,7 +48,7 @@ $tertiary-color-hover: #666666;
 	margin-right: 2em;
 	margin-bottom: 1em;
 
-	height: 90%;
+	height: 85%;
 
 	-webkit-box-shadow: 13px 14px 41px -7px rgba(73,105,103,1);
 	-moz-box-shadow: 13px 14px 41px -7px rgba(73,105,103,1);
